--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Title</title>
+    <title>CASA CHICA HOME</title>
 </head>
-<body>
+
+<body bgcolor="black">    
+         <div id="titulo">
+             <font size ="10">
+                 <font color=white>
+                    CASA CHICA
+                   </font>                     
+            </font>
+            <div id="Logo">
+            </div>
+            <div id = "sub">
+                <font size = 3>
+                    <font color=white>
+                        restaurante & bar
+                       </font> 
+                </font>
+            </div>
+         </div>
+<div>
+         <div id="menu1">
+            MENU 1
+            <div id="scroll">
+                IMAGEN            
+             <div id="menu2">
+                MENU 2
+             </div>
+            </div>    
+        </div>
+</div>
+
 </body>
 </html>
