--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<<<<<<< HEAD
+<h1<H<h<<<< HEAD
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,45 +9,25 @@
     <title>CASA CHICA HOME</title>
 </head>
 
-<body bgcolor="black">    
-         <div id="titulo">
-             <font size ="10">
-                 <font color=white>
-                    CASA CHICA
-                   </font>                     
-            </font>
+<body>    
+        <div id="cabecera">
+            <h1 id="titulo">CASA CHICA</h1>
             <div id="Logo">
             </div>
-            <div id = "sub">
-                <font size = 3>
-                    <font color=white>
-                        restaurante & bar
-                       </font> 
-                </font>
-            </div>
-         </div>
-<div>
-         <div id="menu1">
-            MENU 1
-            <div id="scroll">
-                IMAGEN            
-             <div id="menu2">
-                MENU 2
-             </div>
-            </div>    
+            <h5 id = "subTitulo">restaurante & bar</h5>
         </div>
-</div>
+        <div id="central">
+            <div id="menu1" class="central">
+                MENU 1
+            </div>
+            <div id="scroll" class="central">
+                IMAGEN     
+            </div>      
+            <div id="menu2" class="central">
+                MENU 2
+            </div>
+           
+        </div>
 
 </body>
 </html>
-=======
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Pagina web</title>
-  </head>
-  <body></body>
-</html>
->>>>>>> 9c075903e6ac9afbcdcbdee293ce3a84809cc490
