Creacion del slaider y de los menus

--- a/index.html
+++ b/index.html
@@ -18,16 +18,135 @@
         </div>
         <div id="central">
             <div id="menu1" class="central">
-                MENU 1
+                <p id="bebidas">BEBIDAS</p>
+                <ul>
+                    <li>
+                        <p>CHELA FRAPE</p>
+                        <ul>
+                            <li>Mango ...... $65.00</li>
+                            <li>Fresa ...... $65.00</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <p>CERVEZA</p>
+                        <ul>
+                            <li>Tecate ...... $30.00</li>
+                            <li>Heineken .... $30.00</li>
+                            <li>Bohemia .... $30.00</li>
+                            <li>Victoria .... $30.00</li>
+                            <li>Corona .... $30.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <P>MICHELADA</P>
+                        <ul>
+                            <li>Mediana ...... $45.00</li>
+                            <li>Grande ...... $65.00</li>
+                            <li>Mango</li>
+                            <li>Fresa</li>
+                            <li>Tamarindo</li>
+                            <li>Clamatio</li>
+                            <li>Clasica</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>PREPARADOS</p>
+                        <ul>
+                            <li>Mojitos ...... $75.00</li>
+                            <li>Piña colada ...... $65.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>MARGARITA</p>
+                        <ul>
+                            <li>Mango ...... $65.00</li>
+                            <li>Fresa ...... $65.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>REFRESCS</p>
+                        <ul>
+                            <li>7up ...... $25.00</li>
+                            <li>Coca-cola ...... $25.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>SODA ITALIANA</p>
+                        <ul>
+                            <li>limon ...... $65.00</li>
+                            <li>Naranja ...... $65.00</li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
             <div id="scroll" class="central">
-                IMAGEN     
+                <img name= "slaider" width="620" height="600">
             </div>      
-            <div id="menu2" class="central">
-                MENU 2
-            </div>
-           
-        </div>
+              <div id="menu2" class="central">
+                <p id="bebidas">ALIMENTOS</p>
+                <ul>
+                    <li>
+                        <p>ALITAS O COSTILLAS</p>
+                        <ul>
+                            <li>hot BBQ ...... $95.00</li>
+                            <li>BBQ .......... $95.00</li>
+                            <li>Picantes ..... $95.00</li>
+                            <li>Buffalo .......... $95.00</li>
+                            <li>Jalapeño .......... $95.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>MARISCOS</p>
+                        <ul>
+                            <li>Ceviche de pescado ...... $95.00</li>
+                            <li>Ceviche de camaron ...... $95.00</li>
+                            <li>Agua chile .............. $115.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <P>QUESADILLAS</P>
+                        <ul>
+                            <li>Carnes frias ...... $55.00</li>
+                            <li>Hawaiana .......... $55.00</li>
+                            <li>Pastor ............ $55.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>HAMBURGUESAS</p>
+                        <ul>
+                            <li>Clasica ...... $65.00</li>
+                            <li>Pollo   ...... $75.00</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>PIZZA SENCILLA</p>
+                        <ul>
+                            <li>Personal ...... $80.00</li>
+                            <li>MEDIAN   ...... $145.00</li>
+                            <li>Familiar   ...... $145.00</li>
+                            <li>Mexicana</li>
+                            <li>Carnes frias</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <p>PIZZA ESPECIAL</p>
+                        <ul>
+                            <li>Personal ...... $80.00</li>
+                            <li>MEDIAN   ...... $145.00</li>
+                            <li>Familiar   ...... $145.00</li>
+                            <li>Casa chica</li>
+                            <li>Italiana</li>
+                        </ul>
+                    </li>
 
+                </ul>
+            </div>
+        </div>
+    <script src="index.js">   
+    </script>
+        <!--Limpear elementos flotados-->
+    <div class="clearfix"></div>
+    <footer>Derechos recevardos &copy; CASA CHICA  </footer>
 </body>
 </html>
